Manually revert window.open() should gate new tab/new popup based on toolbar visibility.

> Previously, Chrome required that toolbar, menubar, scrollbars, status,
> resizable were all set to enabled to open a window as a new tab rather
> than a new popup. However, this causes developer frustration if one of
> window features is accidentally omitted (as it then defaults to
> disabled).
>
> Instead, just use toolbar visibility to determine whether or not
> window.open() creates a new popup or a new tab, which matches Firefox.
>
> BUG=82522
> Review-Url: https://codereview.chromium.org/2773573002
> Cr-Commit-Position: refs/heads/master@{#459540}
> Committed: https://chromium.googlesource.com/chromium/src/+/9437eff8b07624d3bf0ec2edfc87b447fa8b9110 [formerly e507bb334d3c66917eec47fbc476ed0a7d62f33f]

Bug: 723655
Change-Id: Ia9199be56cab9b5bc6f758081677e8328562fc54
Reviewed-on: https://chromium-review.googlesource.com/575122
Reviewed-by: Nate Chapin <japhet@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487681}
Former-commit-id: 122bd4bcd53fa246f8c9dfd1b0543b626c3338d3